--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -84,12 +84,18 @@ keywords = "search engine, neural network, matching, filter, SaaS, approximate n
     url = "/solutions/"
 
   [[menu.main]]
-    identifier = "pricing"
-    name = "Pricing"
+    identifier = "demo"
+    name = "Demos"
     weight = 3
     parent = "product"
-    url = "/pricing/"
+    url = "/demo/"
 
+  [[menu.main]]
+    identifier = "pricing"
+    name = "Pricing"
+    weight = 4
+    parent = "product"
+    url = "/pricing/"
 
 [[menu.main]]
   identifier = "resources"
