--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -31,6 +31,7 @@ keywords = "search engine, neural network, matching, filter, SaaS, approximate n
   github = "https://github.com/qdrant/qdrant"
   quick_start = "https://github.com/qdrant/qdrant/blob/master/QUICK_START.md"
   tutorial = "/articles/neural-search-tutorial/"
+  demos = "/demo"
 
   linkedin = "https://qdrant.to/linkedin"
   twitter = "https://qdrant.to/twitter"
