--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -83,17 +83,25 @@ keywords = "search engine, neural network, matching, filter, SaaS, approximate n
     parent = "product"
     url = "/solutions/"
 
+
+  [[menu.main]]
+    identifier = "benchmarks"
+    name = "Benchmarks"
+    weight = 3
+    parent = "product"
+    url = "/benchmarks/"
+
   [[menu.main]]
     identifier = "demo"
     name = "Demos"
-    weight = 3
+    weight = 4
     parent = "product"
     url = "/demo/"
 
   [[menu.main]]
     identifier = "pricing"
     name = "Pricing"
-    weight = 4
+    weight = 5
     parent = "product"
     url = "/pricing/"
 
