--- a/qdrant-landing/package.json
+++ b/qdrant-landing/package.json
@@ -1,5 +1,28 @@
 {
+  "scripts": {
+    "build": "webpack --mode=production"
+  },
   "dependencies": {
+    "@splidejs/splide": "^4.1.2",
     "bootstrap": "^4.6.1"
+  },
+  "devDependencies": {
+    "copy-webpack-plugin": "^11.0.0",
+    "sass": "^1.54.6",
+    "terser-webpack-plugin": "^5.3.6",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
