--- a/qdrant-landing/package.json
+++ b/qdrant-landing/package.json
@@ -4,14 +4,15 @@
   },
   "dependencies": {
     "@splidejs/splide": "^4.1.2",
-    "bootstrap": "^4.6.1"
+    "bootstrap": "^4.6.1",
+    "qdrant-page-search": "^1.0.1"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
     "sass": "^1.54.6",
     "terser-webpack-plugin": "^5.3.6",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
+    "webpack-cli": "^4.10.0"
   },
   "browserslist": {
     "production": [
