--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -38,6 +38,7 @@ keywords = "search engine, vector database, neural network, matching, filter, Sa
   twitter = "https://qdrant.to/twitter"
   discord = "https://qdrant.to/discord"
   facebook = "https://qdrant.to/facebook"
+  youtube = "https://www.youtube.com/channel/UC6ftm8PwH1RU_LM1jwG0LQA"
 
   email = "info@qdrant.tech"
   location = "Berlin"
