--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -53,7 +53,8 @@ keywords = "search engine, vector database, neural network, matching, filter, Sa
   githubDocPrefix = "https://github.com/qdrant/docs/tree/master/qdrant/v0.11.x/"
   githubCloudDocPrefix = "https://github.com/qdrant/docs/tree/master/cloud/v0.1.x/"
 
-docVersion = "v0.11.x"
+  docVersion = "v0.11.x"
+  cloudDocVersion = "v0.1.x"
 
   googleTagManager = "GTM-KRLCXD5"
 
