--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,6 @@ jobs:
           git config --global user.email 'qdrant@users.noreply.github.com'
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
           git checkout $GITHUB_HEAD_REF
-          git add qdrant-landing/content/documentation/**.md
+          git add qdrant-landing/content/documentation/*.md
+          git add qdrant-landing/content/documentation/cloud/*.md
           git commit -am "docs auto-sync" && git push --force || true
