seed article & db adjustments

--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -12,7 +12,7 @@ keywords = "search engine, vector database, neural network, matching, filter, Sa
 
 [params]
   author = "Andrey Vasnetsov"
-  description = "Qdrant is an Open-Source Vector Search Engine and Vector Database written in Rust. It provides fast and scalable service with convenient API."
+  description = "Qdrant is an Open-Source Vector Database and Vector Search Engine written in Rust. It provides fast and scalable vector similarity search service with convenient API."
   keywords = ["vector search engine", "neural network", "matching", "SaaS",
     "approximate nearest neighbor search", "image search", "recommender system", "vectors",
     "knn algorithm", "hnsw", "vector search", "embeddings", "similarity", "simaes networks",
