--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -51,8 +51,7 @@ keywords = "search engine, vector database, neural network, matching, filter, Sa
 
   gdpr = "We use cookies to learn more about you. At any time you can delete or block cookies through your browser settings."
 
-  githubDocPrefix = "https://github.com/qdrant/docs/tree/master/qdrant/v1.2.x/"
-  githubCloudDocPrefix = "https://github.com/qdrant/docs/tree/master/cloud/v0.1.x/"
+  githubDocPrefix = "https://github.com/qdrant/landing_page/tree/master/qdrant-landing/content/documentation/"
 
   docVersion = "v1.2.x"
   cloudDocVersion = "v0.1.x"
