--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -158,6 +158,15 @@ keywords = "search engine, vector database, neural network, matching, filter, Sa
     [menu.main.params]
         external = true
 
+  [[menu.main]]
+    identifier = "datasets"
+    name = "Datasets"
+    weight = 8
+    parent = "resources"
+    url = "/datasets/"
+    [menu.main.params]
+        external = false
+
 [[menu.main]]
   identifier = "community"
   name = "Community"
