removed usage of highlights.js because hugo uses another code highlighter

--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -259,5 +259,9 @@ keywords = "search engine, vector database, neural network, matching, filter, Sa
     parent = "company"
     url = "/legal/credits/"
 
-[markup.goldmark.renderer]
-unsafe= true
+[markup]
+  [markup.goldmark.renderer]
+    unsafe=true
+  [markup.highlight]
+    style='friendly'
+   codeFences=true
