dev portal structure
1. created developers folder
2. moved integrations, examples, community, articles, benchmarks to developers folder
3. small changes to config

--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -187,9 +187,10 @@ keywords = "search engine, vector database, neural network, matching, filter, Sa
 
 
 [[menu.main]]
-  identifier = "community"
-  name = "Community"
+  identifier = "developers"
+  name = "Developers"
   weight = 4
+  url = "/developer/"
   [menu.main.params]
     in_header = true
     in_footer = true
