--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -155,6 +155,14 @@ keywords = "search engine, vector database, neural network, matching, filter, Sa
     in_header = true
     in_footer = true
 
+[[menu.main]]
+  identifier = "community"
+  name = "Community"
+  weight = 5
+  [menu.main.params]
+    in_header = true
+    in_footer = true
+
   [[menu.main]]
     identifier = "github"
     name = "Github"
