--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -72,6 +72,7 @@ keywords = "search engine, vector database, neural network, matching, filter, Sa
   gdpr = "We use cookies to learn more about you. At any time you can delete or block cookies through your browser settings."
 
   githubDocPrefix = "https://github.com/qdrant/landing_page/tree/master/qdrant-landing/content/"
+  githubIssueLink = "https://github.com/qdrant/landing_page/issues/new/choose"
 
   docVersion = "v1.4.x"
   cloudDocVersion = "v0.1.x"
