google fonts upd: Roboto and Roboto Mono
fixes

(cherry picked from commit 94cdc16909249a4def71e7a70dd24513a9fc69a6)

font

(cherry picked from commit 6ee265351c772bca32bd9fafd95a08540e3e4c32)

--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -18,7 +18,10 @@ keywords = "search engine, vector database, neural network, matching, filter, Sa
     "knn algorithm", "hnsw", "vector search", "embeddings", "similarity", "simaes networks",
     "BERT", "transformer", "word2vec", "fasttext"]
 
-  font = "Anonymous Pro"
+  fonts = [
+    "Roboto+Mono:wght@200;300",
+    "Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700"
+  ]
   highlight = true
   highlightStyle = "default"
   highlightLanguages = ["python", "rust", "json", "bash", "http"]
