fix for related posts config

--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -299,5 +299,5 @@ keywords = "search engine, vector database, neural network, matching, filter, Sa
   includeNewer = true
   toLower = true
   [[related.indices]]
-    name = "category"
+    name = "tags"
     weight = 100
