--- a/.github/workflows/generate-preview-images.yml
+++ b/.github/workflows/generate-preview-images.yml
@@ -26,4 +26,4 @@ jobs:
           git config --global user.email 'qdrant@users.noreply.github.com'
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
           git checkout $GITHUB_HEAD_REF
-          git commit -am "update blog preview images" && git push --force || true
+          git commit -am "update blog preview images" && git push || true
