--- a/.github/workflows/generate-preview-images.yml
+++ b/.github/workflows/generate-preview-images.yml
@@ -11,6 +11,8 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Install cwebp and imagemagick
+        run: sudo apt-get install -y webp imagemagick
       - name: Run a script
         run: |
           ADD_TO_GIT=true bash -x automation/gen-all-blogs-previews.sh
