--- a/qdrant-landing/static/admin/config.yml
+++ b/qdrant-landing/static/admin/config.yml
@@ -1,8 +1,8 @@
 backend:
   name: git-gateway
   branch: master # Branch to update (optional; defaults to master)
-media_folder: qdrant-landing/static/blog_data/from_cms
-public_folder: /blog_data/from_cms
+media_folder: qdrant-landing/static/blog/from_cms
+public_folder: /blog/from_cms
 collections:
   - name: 'blog'
     label: 'Blog'
