--- a/qdrant-landing/static/admin/config.yml
+++ b/qdrant-landing/static/admin/config.yml
@@ -22,7 +22,7 @@ collections:
       - { label: 'Description', name: 'description', widget: 'string',
           hint: 'Shown in previews of featured posts and on social media' }
       - { label: 'Preview Image', name: 'preview_image', widget: 'image',
-          hint: 'Shown in previews of featured posts and on social media' }
+          hint: 'Image should be 1200x630' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Author', name: 'author', widget: 'string', hint: 'Name'}
       - { label: 'Featured Post', name: 'featured', widget: 'boolean', default: false,
