run blog update script on pushes into master

--- a/.github/workflows/generate-preview-images.yml
+++ b/.github/workflows/generate-preview-images.yml
@@ -2,6 +2,11 @@ name: update-blog-preview-images
 on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  # Run on commits to the master branch
+  push:
+    branches:
+      - master
+
 
 jobs:
   sync:
