--- a/.github/workflows/internal-dead-links.yml
+++ b/.github/workflows/internal-dead-links.yml
@@ -22,6 +22,6 @@ jobs:
         id: lychee
         uses: lycheeverse/lychee-action@v1.9.1
         with:
-          args: --offline qdrant-landing/public
+          args: 'qdrant-landing/public'
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
