--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -81,21 +81,15 @@ keywords = "search engine, vector database, neural network, matching, filter, Sa
   name = "Andrey Vasnetsov"
   email = "info@qdrant.tech"
 
-[params.ui.feedback]
-enable = true
-# The responses that the user sees after clicking "yes" (the page was helpful) or "no" (the page was not helpful).
-yes = 'Thanks!'
-no = 'Sorry! You can edit this page on GitHub, or create a GitHub issue.'
-
-# Feedback details. See feedback.html
-[feedback_title]
-other = "Feedback"
-[feedback_question]
-other = "Was this page helpful?"
-[feedback_positive]
-other = "Yes"
-[feedback_negative]
-other = "No"
+[params.feedback]
+  enable = true
+  max_value = 1
+  title = "Feedback"
+  question = "Was this page helpful?"
+  positive = "Yes"
+  negative = "No"
+  on_yes = "Thanks! 🙏"
+  on_no = "Sorry! 😔"
 
 [taxonomies]
     tag = "tags"
