--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -81,6 +81,16 @@ keywords = "search engine, vector database, neural network, matching, filter, Sa
   name = "Andrey Vasnetsov"
   email = "info@qdrant.tech"
 
+[params.feedback]
+  enable = true
+  max_value = 100
+  title = "Feedback"
+  question = "Was this page helpful?"
+  positive = "Yes"
+  negative = "No"
+  on_yes = "Thanks! 🙏"
+  on_no = "Sorry! 😔"
+
 [taxonomies]
     tag = "tags"
     category = "categories"
