docs: Add GitHub feedback links at the end of the documentation articles to maintain a consistent appearance for these links.

--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -90,6 +90,9 @@ keywords = "search engine, vector database, neural network, matching, filter, Sa
   on_yes = "Thanks! 🙏"
   on_no = "Sorry! 😔"
 
+[params.github_links]
+  enable = true
+  
 [taxonomies]
     tag = "tags"
     category = "categories"
