--- a/qdrant-landing/config.toml
+++ b/qdrant-landing/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://qdrant.tech"
 languageCode = "en-us"
 title = "Qdrant - Vector Database"
-theme = "qdrant"
+theme = "qdrant-24"
 
 googleAnalytics = "G-NZYW2651NE"
 enableRobotsTXT = true
@@ -309,3 +309,15 @@ keywords = "search engine, vector database, neural network, matching, filter, Sa
   [[related.indices]]
     name = "tags"
     weight = 100
+
+[[module.mounts]]
+source = "node_modules/qdrant-page-search/dist/css/styles.min.css"
+target = "assets/css/qdrant-page-search.css"
+
+[[module.mounts]]
+source = "node_modules/qdrant-page-search/dist/js/search.min.js"
+target = "assets/js/qdrant-page-search.min.js"
+
+[[module.mounts]]
+source = "node_modules/qdrant-page-search/dist/js/scroll.min.js"
+target = "assets/js/qdrant-page-search-scroll.min.js"
