--- a/qdrant-landing/netlify.toml
+++ b/qdrant-landing/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-publish = "qdrant-landing/public"
-command = "cd qdrant-landing ; hugo --gc --minify"
+publish = "public"
+command = "hugo --gc --minify"
 
 [build.environment]
 HUGO_VERSION = "0.122.0"
@@ -13,7 +13,7 @@ HUGO_ENABLEGITINFO = "true"
 HUGO_ENV = "staging"
 
 [context.deploy-preview]
-command = "cd qdrant-landing ; echo $HUGO_ENV ; hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
+command = "echo $HUGO_ENV ; hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
 
 [[headers]]
     for = "/*"
