--- a/qdrant-landing/.github/workflows/internal-dead-links.yml
+++ b/qdrant-landing/.github/workflows/internal-dead-links.yml
@@ -17,12 +17,12 @@ jobs:
         with:
           hugo-version: "latest"
       - name: Run hugo
-        run: cd qdrant-landing && hugo -b 'https://qdrant.tech/'
+        run: hugo -b 'https://qdrant.tech/'
       - name: Link Checker
         id: lychee
         uses: lycheeverse/lychee-action@v1.8.0
         with:
-          args: --offline qdrant-landing/public
+          args: --offline public
           fail: true
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
