--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 publish = "qdrant-landing/public"
-command = "cd qdrant-landing ; hugo --gc --minify"
+command = "bash -x ./install-and-build.sh"
 
 [build.environment]
 HUGO_VERSION = "0.123.0"
@@ -13,15 +13,6 @@ HUGO_ENABLEGITINFO = "true"
 
 [context.deploy-preview.environment]
 HUGO_ENV = "staging"
-
-[context.deploy-preview]
-command = """\
-    curl -LJO https://github.com/sass/dart-sass/releases/download/${DART_SASS_VERSION}/dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz && \
-    tar -xf dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz && \
-    rm dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz && \
-    export PATH=/opt/build/repo/dart-sass:$PATH && \
-    cd qdrant-landing && npm install && echo $HUGO_ENV && hugo --gc --minify --config config.toml,config-theme.toml --buildFuture -b $DEPLOY_PRIME_URL
-    """
 
 [[headers]]
     for = "/*"
