--- a/.github/workflows/internal-dead-links.yml
+++ b/.github/workflows/internal-dead-links.yml
@@ -16,8 +16,13 @@ jobs:
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: "latest"
+      - name: Install npm
+        uses: actions/setup-node@v2
+        with:
+          node-version: '20'
       - name: Run hugo
         run: |
+          bash -x ./install-and-build.sh
           cd qdrant-landing && hugo --gc -b 'http://localhost:1313' && hugo serve &
           sleep 5 # wait for server to start
       - name: Link Checker
